--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
       "type": "debugpy",
       "request": "launch",
       "args": [
-        "runserver"
+        "runserver",
+        "6500"
       ],
       "django": true,
       "autoStartBrowser": false,
